[PATCH] Cyrix MII cpuid returns stale %ecx

This patch is for the following bug, thanks to Ondrej Zary for reporting,
testing and submitting a patch.

http://bugzilla.kernel.org/show_bug.cgi?id=3767

It appears that the Cyrix MII won't touch %ecx at all resulting in stale
data being returned as extended attributes, so clear ecx before issuing the
cpuid.  I have also made the capability print code display all the
capability words for easier debugging in future.

Signed-off-by: Zwane Mwaikambo <zwane@linuxpower.ca>
Signed-off-by: Andrew Morton <akpm@osdl.org>
Signed-off-by: Linus Torvalds <torvalds@osdl.org>